apps/discord-bot/discord-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord
spec:
  selector:
    matchLabels:
      app: discord
  replicas: 1
  template:
    metadata:
      labels:
        app: discord
    spec:
      containers:
        - name: discord
          image: ghcr.io/ieee-tamu/discord-bot:0.2.3
          ports:
            - containerPort: 3000
