apps/discord-bot/discord-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord
spec:
  selector:
    app: discord
  type: ClusterIP
  ports:
    - name: http
      port: 3000
